--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>script.module.clouddrive.common</name>
 	<comment></comment>
 	<projects>
+		<project>script.module.cherrypy</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
